--- a/css/style.css
+++ b/css/style.css
@@ -484,7 +484,7 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 
 .mail-input {
-    margin-left: 93px;
+    margin-left: auto;
 }
 .mail-input-form{
     display: flex;
@@ -775,7 +775,7 @@ border: 1px solid rgba(255, 255, 255, 0.3);
         display: flex;
         align-items: center;
         margin-bottom: 30px;
-        
+        justify-content: center;
 }
 .contact-form-checkbox-label::before{
     display: inline-block;
